--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -100,7 +100,7 @@ h2 {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin-top: -50px; /* adjust the margin to center the button */
+  margin-top: 20px; /* adjust the margin to center the button */
 }
 
 .button-container {
@@ -123,4 +123,37 @@ h2 {
   background-color: #1f2b5a;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3)
+}
+
+.prediction-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+
+}
+.prediction {
+  flex: 1;
+  background-color: #354b9c;
+  padding: 10px;
+  margin: 10px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.prediction h3 {
+  font-size: 24px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.prediction p {
+  font-size: 18px;
+  color: #fff;
+}
+
+h4 {
+  color: #fff;
 }
